# atw-web-ui

./: README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/routes/: __init__.py  health.py  notifications.py  projects.py  session.py  sync.py  tasks.py  workflow.py
backend/app/services/: atw_client.py  notifications.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/: manifest.webmanifest  sw.js
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/components/: notification-provider.tsx  providers.tsx
frontend/src/components/files/: file-explorer.tsx  index.ts  markdown-viewer.tsx
frontend/src/components/kanban/: index.ts  kanban-board.tsx  kanban-card.tsx  kanban-column.tsx  sortable-kanban-card.tsx
frontend/src/components/layout/: header.tsx  index.ts  mobile-nav.tsx  sidebar.tsx
frontend/src/components/projects/: index.ts  project-card.tsx  project-detail.tsx
frontend/src/components/session/: index.ts  terminal.tsx
frontend/src/components/sync/: index.ts  sync-controls.tsx  sync-output.tsx
frontend/src/components/tasks/: index.ts  (+3 more)
frontend/src/hooks/: index.ts  use-notifications.ts  use-projects.ts  use-tasks.ts  use-terminal-session.ts  use-workflow.ts
frontend/src/lib/: api.ts  constants.ts  utils.ts
frontend/src/types/: index.ts  project.ts  task.ts  workflow.ts
scripts/: dev.sh  install-service.sh  install.sh  setup.sh  start.sh  stop.sh  uninstall-service.sh
scripts/systemd/: atw-web-backend.service  atw-web-frontend.service
(+31 files in other folders)
